[package]
name = "marsh-drillx"
version = "0.2.0"
description = "Drillx is a proof-of-work algorithm for Mars(h) mining mission."
edition = "2021"
license = "Apache-2.0"
homepage = "https://miraland.io/marsh"
documentation = "https://miraland.io/marsh"
repository = "https://github.com/miraland-labs/drillx"
readme = "./README.md"
keywords = ["solana", "crypto", "miraland", "mars", "marsh"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "drillx"

[features]
default = ["full"]
benchmark = []
compiler = ["equix/compiler"]
full = ["equix/full"]
solana = ["solana-program"]
gpu = ["cc"]

[dependencies]
blake3 = { workspace = true }
equix = { workspace = true }
solana-program = { workspace = true, optional = true }
strum = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, default-features = true, features = ["html_reports"] }

[build-dependencies]
cc = { version = "1.0", optional = true }


[[bench]]
name = "drillx_loop"
harness = false
